[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repuwave-middleware"
version = "0.1.0"
authors = [
  { name="Repuwave", email="support@repuwave.io" },
]
description = "Repuwave Python Middleware (Django & FastAPI) for agent verification."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
django = ["django>=3.2"]
fastapi = ["fastapi>=0.68.0", "starlette>=0.14.2"]
